fix navbar collapse and make toggle inline

--- a/mysite/static/dark-theme.css
+++ b/mysite/static/dark-theme.css
@@ -2,6 +2,7 @@
 body {
     background-color: #333333;
     color: #babcbf;
+    margin-top: 70px;
 }
 
 /* Change the background color of the navbar */
@@ -221,9 +222,7 @@ input:checked + .slider:before {
 }
 
 .theme-toggle {
-	position: fixed;
-	top:0;
-	right:0;
-	margin-top: 60px;
-	margin-right: 30px;
+	margin-top: 7px;
+	margin-left: 7px;
 }
+
